--- a/Flower Trading Platform/.vscode/settings.json
+++ b/Flower Trading Platform/.vscode/settings.json
@@ -43,6 +43,7 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "chrono": "cpp",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "iomanip": "cpp"
     }
 }
